<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tIm</string>
    <string name="nodata">None</string>
    <string name="title_activity_new_item">Create a new item</string>
    <string name="title_activity_new_location">Add a new location</string>

    <!-- Buttons -->
    <string name="enterbarcode">Enter Barcode/SKU</string>
    <string name="button_search">Search</string>
    <string name="button_new">New</string>
    <string name="button_edit">Edit</string>
    <string name="button_inventory">Inventory</string>
    <string name="button_locate">Locate</string>
    <string name="addamount">Add</string>
    <string name="subtractamount">Subtract</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="button_done">Done</string>

    <!-- Labels -->
    <string name="barcode_label">Barcode</string>
    <string name="sku_label">SKU</string>
    <string name="desc_name_label">Description/Name</string>
    <string name="instock_label">In Stock</string>
    <string name="inventoryaction">Inventory action?</string>
    <string name="amount_label">Amount:</string>
    <string name="or">OR</string>
    <string name="location_label">Location</string>
    <string name="in_stock">Items in stock</string>

    <!-- Hints -->
    <string name="barcode_hint">Enter a barcode</string>
    <string name="sku_hint">Enter a SKU</string>
    <string name="desc_name_hint">Enter a description or name</string>
    <string name="location_hint">Enter a location</string>
    <string name="title_activity_barcode_scanner">Scan a Barcode</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_text">Scanning.....</string>

    <!-- Main Buttons -->
    <string name="button_scan">Scan a barcode</string>
    <string name="button_item">Add new item</string>
    <string name="button_location">Add new location</string>
    <string name="button_save">Save</string>
    <string name="button_update">Inventory</string>
    <string name="title_activity_location_details">Location</string>
    <string name="title_activity_splash_screen">Welcome to tIm</string>
    <string name="button_delete">Delete</string>

</resources>
