<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#efefef"
    android:padding="32dp">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instock_label"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/currentStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/nodata"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/inventory_action_hdr"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventoryaction"
        android:paddingLeft="12dp"
        android:textSize="16sp"/>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.4dp"
        android:id="@+id/separator"
        android:visibility="visible"
        android:layout_margin="12dp"
        android:background="@android:color/darker_gray"/>
    
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">
        <RadioButton 
            android:id="@+id/radio_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addamount"/>
        <RadioButton android:id="@+id/radio_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/subtractamount"/>
    </RadioGroup>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_label"
            android:layout_marginRight="8dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/amountPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/> 
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
    	<Button
        	android:id="@+id/ok"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/okay"
        	android:padding="4dp"
	    	android:textColor="#FFFFFF"
	    	android:background="#000000"/>
    	<Button
        	android:id="@+id/cancel"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/cancel"
        	android:padding="4dp"
	    	android:textColor="#FFFFFF"
	    	android:background="#000000"/>
    </LinearLayout>
    
</LinearLayout>
