<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
    
    <!-- Main Buttons - Scan, New Item, New Location -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal" >
        
        <Button 
       		android:id="@+id/scanBut"
        	android:layout_width="0dp"
        	android:layout_height="80dp"
        	android:layout_weight="1"
        	android:text="@string/button_scan" 
        	android:textSize="16sp"/>
        
        <Button 
       		android:id="@+id/itemBut"
        	android:layout_width="0dp"
        	android:layout_height="80dp"
        	android:layout_weight="1"
        	android:text="@string/button_item" 
        	android:textSize="16sp"/>
        
        <Button 
       		android:id="@+id/locationBut"
        	android:layout_width="0dp"
        	android:layout_height="80dp"
        	android:layout_weight="1"
        	android:text="@string/button_location" 
        	android:textSize="16sp"/>
  
    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/or" /> 
        
    <!-- Searching by entering a Barcode, SKU, Name or Location -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:orientation="horizontal">
		
        <Spinner
            android:id="@+id/searchSpin" 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        
       	<EditText 
        	android:id="@+id/searchBx"
        	android:layout_marginLeft="8dp"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="3"
        	android:hint="@string/enterbarcode" />
    	  	
    </LinearLayout>
    
    <Button 
       	android:id="@+id/searchBut"
       	android:layout_marginTop="8dp"
       	android:layout_marginBottom="8dp"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_gravity="center_horizontal"
       	android:text="@string/button_search" 
       	android:textSize="16sp"/>
    
    <ExpandableListView
        android:id="@+id/searchRes"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
        
</LinearLayout>
