<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cs451_inventoryapp.NewLocationActivity" 
    android:padding="32dp">

    <TextView
        android:id="@+id/locLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label" />
    
    <EditText 
        android:id="@+id/locName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_hint"
        android:layout_below="@id/locLabel"/>
    
    <Button
        android:id="@+id/saveLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_save"/>
    
</RelativeLayout>
