<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:layout_height="match_parent"
  tools:context="com.example.cs451_inventoryapp.BarcodeScannerActivity">

  <FrameLayout
    android:id="@+id/cameraPreview"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"/>

  <TextView
    android:id="@+id/scanText"
    android:text="@string/scan_text"
    android:layout_height="wrap_content" 
    android:layout_width="match_parent"/>
  
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/buttonBarStyle">
      
      <Button
    	android:id="@+id/camerascanBut"
    	android:text="@string/button_scan"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	style="?android:attr/buttonBarButtonStyle"/>
      
  	 <Button
   		android:id="@+id/doneBut"
    	android:text="@string/button_done"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   		android:layout_gravity="center"
   		style="?android:attr/buttonBarButtonStyle"/>
  	 
  </LinearLayout>
  
</LinearLayout>
